[gd_scene load_steps=3 format=2]

[ext_resource path="res://_fonts/goc.tres" type="DynamicFont" id=1]
[ext_resource path="res://about/about.gd" type="Script" id=2]

[node name="about" type="Node2D"]
script = ExtResource( 2 )

[node name="subtitle" type="Label" parent="."]
margin_left = 312.0
margin_top = 220.0
margin_right = 541.0
margin_bottom = 274.0
custom_fonts/font = ExtResource( 1 )
text = "about"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game" type="Label" parent="."]
margin_left = 178.0
margin_top = 373.0
margin_right = 722.0
margin_bottom = 541.0
custom_fonts/font = ExtResource( 1 )
text = "game released under
 the MIT license"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_btn" type="LinkButton" parent="."]
margin_left = 179.0
margin_top = 373.0
margin_right = 368.0
margin_bottom = 427.0
custom_constants/underline_spacing = 4
custom_fonts/font = ExtResource( 1 )
text = "game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mit_btn" type="LinkButton" parent="."]
margin_left = 199.46
margin_top = 487.202
margin_right = 720.46
margin_bottom = 541.202
focus_mode = 2
custom_constants/underline_spacing = 4
custom_fonts/font = ExtResource( 1 )
text = "the mit license"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="font" type="Label" parent="."]
margin_left = 170.0
margin_top = 586.0
margin_right = 730.0
margin_bottom = 697.0
custom_fonts/font = ExtResource( 1 )
text = "font by cloutierfontes"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="font_btn" type="LinkButton" parent="."]
margin_left = 311.389
margin_top = 585.802
margin_right = 481.389
margin_bottom = 639.802
focus_mode = 2
custom_constants/underline_spacing = 4
custom_fonts/font = ExtResource( 1 )
text = "font"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cloutierfontes_btn" type="LinkButton" parent="."]
margin_left = 169.58
margin_top = 643.241
margin_right = 728.58
margin_bottom = 697.241
focus_mode = 2
custom_constants/underline_spacing = 4
custom_fonts/font = ExtResource( 1 )
text = "cloutierfontes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="engine" type="Label" parent="."]
margin_left = 139.0
margin_top = 740.0
margin_right = 762.0
margin_bottom = 851.0
custom_fonts/font = ExtResource( 1 )
text = "made with Godot
by paul lloyd"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="godot_btn" type="LinkButton" parent="."]
margin_left = 526.58
margin_top = 739.766
margin_right = 760.58
margin_bottom = 793.766
focus_mode = 2
custom_constants/underline_spacing = 4
custom_fonts/font = ExtResource( 1 )
text = "godot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dev_btn" type="LinkButton" parent="."]
margin_left = 304.214
margin_top = 796.647
margin_right = 704.214
margin_bottom = 850.647
focus_mode = 2
custom_constants/underline_spacing = 4
custom_fonts/font = ExtResource( 1 )
text = "paul lloyd"
__meta__ = {
"_edit_use_anchors_": false
}
